# SMQawa

./: .gitignore  LICENSE  MANIFEST.in  README.md  Sumw_2016.yaml  Sumw_2016APV.yaml  Sumw_2017.yaml  Sumw_2018.yaml  Untitled.ipynb  brew-dask.py  brew-local.py  brewer-dump-local.py  brewer-htcondor-2018-MC.py  brewer-htcondor-2018-data.py  brewer-htcondor-aQGC.py  brewer-htcondor-gnn-input.py  brewer-htcondor-inclusive.py  brewer-htcondor-skim.py  brewer-htcondor-trig_eff.py  brewer-htcondor.py  brewer-local.py  brewer-remote-aQGC.py  brewer-remote-inclusive.py  brewer-remote-test.py  brewer-remote.py  brewer.py  brewer_remote_trig.py  brewing-qawa.ipynb  catalogUL.yaml  checkalias.py  checkxrootd.py  concatparquet.py  condor_qawa_WS.py  dask_job_output.err  data_MC_UL_mandalorian2018.txt  datasetUL18.txt  definitions.yaml  ewk-corrections.ipynb  experimenting.ipynb  hist-merge.py  (+17 more)
.ipynb_checkpoints/: experimenting-checkpoint.ipynb
data/: UL2018_hzzSamples_Data  UL2018_hzzSamples_MC.txt  ZG.txt  data_mc.txt  dataset-HIPM_UL2016_MiniAODv2_NanoAODv9.txt  dataset-RunIISummer20UL16NanoAODAPVv9.txt  dataset-RunIISummer20UL16NanoAODv9.txt  dataset-RunIISummer20UL17NanoAODv9.txt  dataset-RunIISummer20UL18NanoAODv9.txt  dataset-UL2016_MiniAODv2_NanoAODv9.txt  dataset-UL2017_MiniAODv2_NanoAODv9.txt  dataset-UL2018_MiniAODv2_NanoAODv9.txt  dataset-ver1_HIPM_UL2016_MiniAODv2_NanoAODv9.txt  dataset2016APVaQGC.txt  dataset2016aQGC.txt  dataset2017aQGC.txt  dataset2018aQGC.txt  dataset22-data.txt  dataset22-mc.txt  datasetUL2016-data-skim.txt  datasetUL2016-data.txt  (+59 more)
qawa/: btag.py  (+6 more)
(+205 files in other folders)
