[metadata]
name = Qawa
description = Algerian coffee is called qawa
long_description = file: README.md
version = 0.0.6
long_description_content_type = text/markdown
author = Yacine Haddad
author_email = yacine.haddad@cern.ch
maintainer = Yacine Haddad
maintainer_email = yacine.haddad@cern.ch
license = BSD-3-Clause
license_files = LICENSE
platforms = Any
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    coffea>=0.7.15
    vector
    onnxruntime
    scipy
    
python_requires = >=3.7
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[build]
build_base = build

[egg_info]
egg_base = build

[flake8]
ignore = E203, E231, E501, E722, W503, B950
select = C,E,F,W,T,B,B9,I
per-file-ignores =
    tests/*: T
